--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-file-organizer",
+  "name": "auto-file-organizer",
   "version": "0.0.1",
   "description": "Organize seus arquivos do Obsidian usando a inteligência do Gemini.",
   "main": "./main.js",
@@ -7,8 +7,7 @@
     "dev": "tsc -w",
     "build": "tsc"
   },
-  "author": "Seu Nome",
-  "license": "MIT",
+  "author": "Guilherme Vianna",
   "dependencies": {
     "obsidian": "^1.8.7"
   },
